--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ react:
     line in _config.yml. It will appear in your document head meta (for
     Google search results) and in your feed.xml site description.
   baseurl: "" # the subpath of your site, e.g. /blog
-  url: "http://test_domain.com:4000" # the base hostname & protocol for your site
+  url: "https://taeilyoon.github.io/portfolio" # the base hostname & protocol for your site
   permalink: /posts/:title
   social:
     twitter: http://twitter.com/liquid_think
@@ -30,8 +30,8 @@ react:
 
 
 
-title: Material Bliss
-name: Andrew Plaza
+title: 그냥 블로그
+name: 그냥
 menu_right_subtitle: Blogger || Computer Scientist
 avatar: http://api.adorable.io/avatar/aplaza@liquidthink.net
 logo: static/img/logo.png
@@ -93,7 +93,7 @@ assets:
     automatic_img_alt : true
 
 exclude: ['node_modules', 'Gemfile', '.asset-cache', 'build-prod.sh', 'build-dev.sh']
-
+remote_theme : insipx/material-bliss-jekyll-theme
 gems:
   - jekyll-assets
   - jekyll_pages_api
